docs: expand quality gate with full test pyramid, E2E, frontend tests, and JaCoCo unified coverage